Fix CVE (#297)
* Pin deps

* PK upgrade

* PK 4.1.0

* Changes file

* Add explicit java version

* Revert "Add explicit java version"

This reverts commit d7dbc0e26d9019cb93c52b45359c99c3c69cfd8c.

* Revert "Changes file"

This reverts commit 5ac00d9943c3133989cfc0839e7fc443653a6d85.

* Revert "PK 4.1.0"

This reverts commit b3c0c5bcade6d114f4161b5d38268b34022caff2.

* Revert "PK upgrade"

This reverts commit 22c29938e3c37305ec9dbda79a1888421aa01d3a.

* PK 4.1.0

* Explicit java version

* Downgrade to PK 4.1.0

* Update build workflows

* Upgrade Exasol versions

* Fix build

* Update references

* Surefire useModulePath

* Add exports required by spark running on java 17: https://stackoverflow.com/questions/72724816/running-unit-tests-with-spark-3-3-0-on-java-17-fails-with-illegalaccesserror-cl

* Release date

* Aim to release tomorrow

---------

Co-authored-by: Christoph Pirkl <christoph.pirkl@exasol.com>