@@ -3,14 +3,14 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.exasol</groupId>
     <artifactId>cloud-storage-extension</artifactId>
-    <version>2.7.9</version>
+    <version>2.7.10</version>
     <name>Cloud Storage Extension</name>
     <description>Exasol Cloud Storage Import And Export Extension</description>
     <url>https://github.com/exasol/cloud-storage-extension/</url>
     <parent>
         <artifactId>cloud-storage-extension-generated-parent</artifactId>
         <groupId>com.exasol</groupId>
-        <version>2.7.9</version>
+        <version>2.7.10</version>
         <relativePath>pk_generated_parent.pom</relativePath>
     </parent>
     <properties>
@@ -425,10 +425,16 @@
             </exclusions>
         </dependency>
         <dependency>
-            <!-- Upgrade transitive dependency of org.apache.avro:avro to fix CVE-2023-42503 -->
+            <!-- Upgrade transitive dependency of org.apache.avro:avro to fix CVE-2024-26308 -->
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-compress</artifactId>
-            <version>1.25.0</version>
+            <version>1.26.0</version>
+        </dependency>
+        <dependency>
+            <!-- Pinned to fix CVE-2023-52428 -->
+            <groupId>com.nimbusds</groupId>
+            <artifactId>nimbus-jose-jwt</artifactId>
+            <version>9.37.3</version>
         </dependency>
         <dependency>
             <groupId>io.delta</groupId>
@@ -677,7 +683,7 @@
                 <version>2.2.0</version>
                 <configuration>
                     <junitxml>.</junitxml>
-                    <argLine>-Djava.util.logging.config.file=src/test/resources/logging.properties ${argLine}</argLine>
+                    <argLine>-Djava.util.logging.config.file=src/test/resources/logging.properties --add-exports java.base/sun.nio.ch=ALL-UNNAMED ${argLine}</argLine>
                 </configuration>
                 <executions>
                     <execution>
@@ -727,12 +733,16 @@
                         <phase>none</phase>
                     </execution>
                 </executions>
+                <configuration>
+                    <useModulePath>false</useModulePath>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <configuration>
                     <useModulePath>false</useModulePath>
+                    <argLine>--add-exports java.base/sun.nio.ch=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
             <plugin>
@@ -775,14 +785,13 @@
                         <ignoredResourcePattern>.*\.properties$</ignoredResourcePattern>
                         <ignoredResourcePattern>.*\.proto$</ignoredResourcePattern>
                     </ignoredResourcePatterns>
-                    <ignoredDependencies>
-                    </ignoredDependencies>
+                    <ignoredDependencies/>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>com.exasol</groupId>
                 <artifactId>project-keeper-maven-plugin</artifactId>
-                <version>2.9.17</version>
+                <version>4.1.0</version>
                 <executions>
                     <execution>
                         <goals>
